# app-report-devops-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: main.py
app/db/: github_commands.py  mongo.py
app/modules/: backstage.py  github.py  github_app.py  github_original_backup.py  sonarcloud.py
app/routers/: README.md  github.py  health.py
app/schemas/: repository.py  settings.py  sync_response.py
helm/ms-devops-backend/: Chart.yaml
helm/values/: prod.yaml  qa.yaml
